logs/dag_id=weather_dag_api/run_id=scheduled__2023-04-26T00:00:00+00:00/task_id=cities.insert_data_Kharkiv/attempt=1.log
[2023-04-27T07:06:22.788+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kharkiv scheduled__2023-04-26T00:00:00+00:00 [queued]>
[2023-04-27T07:06:24.204+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Kharkiv scheduled__2023-04-26T00:00:00+00:00 [queued]>
[2023-04-27T07:06:24.244+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:24.246+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-27T07:06:24.247+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-27T07:06:24.352+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Kharkiv> on 2023-04-26 00:00:00+00:00
[2023-04-27T07:06:24.714+0000] {standard_task_runner.py:55} INFO - Started process 747 to run task
[2023-04-27T07:06:24.879+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Kharkiv', 'scheduled__2023-04-26T00:00:00+00:00', '--job-id', '126', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmpkhfjfllm']
[2023-04-27T07:06:24.886+0000] {standard_task_runner.py:83} INFO - Job 126: Subtask cities.insert_data_Kharkiv
[2023-04-27T07:07:06.646+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Kharkiv scheduled__2023-04-26T00:00:00+00:00 [running]> on host 80d943d8f5b4
[2023-04-27T07:07:14.892+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Kharkiv
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-04-26T00:00:00+00:00
[2023-04-27T07:07:15.006+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				12.1,
				0.0,
				2.9,
				'Kharkiv)';
[2023-04-27T07:07:15.425+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:34.891+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-27T07:07:34.984+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (timestamp, temp, precipitation, wind_speed, location) 
				VALUES ('2023-04-26T05:20:00Z',
				12.1,
				0.0,
				2.9,
				'Kharkiv)';, parameters: None
[2023-04-27T07:07:35.023+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 6:     'Kharkiv)';
                      ^

[2023-04-27T07:07:35.289+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Kharkiv, execution_date=20230426T000000, start_date=20230427T070622, end_date=20230427T070735
[2023-04-27T07:07:35.870+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 126 for task cities.insert_data_Kharkiv (syntax error at or near ";"
LINE 6:     'Kharkiv)';
                      ^
; 747)
[2023-04-27T07:07:36.403+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-27T07:07:38.385+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
